# reactome-anywidget

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
src/reactome_anywidget/: __init__.py  _widget.py
src/reactome_anywidget/static/: widget.js
